src/test/ui/type-alias-impl-trait/issue-60371.stderr
error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/issue-60371.rs:8:17
   |
LL |     type Item = impl Bug;
   |                 ^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0277]: the trait bound `(): Bug` is not satisfied
  --> $DIR/issue-60371.rs:10:40
   |
LL |     const FUN: fn() -> Self::Item = || ();
   |                                        ^ the trait `Bug` is not implemented for `()`
   |
   = help: the following implementations were found:
             <&() as Bug>

error: non-defining opaque type use in defining scope
  --> $DIR/issue-60371.rs:10:37
   |
LL | impl Bug for &() {
   |              - cannot use static lifetime; use a bound lifetime instead or remove the lifetime parameter from the opaque type
...
LL |     const FUN: fn() -> Self::Item = || ();
   |                                     ^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
